openpearl-code/testsuite/must_not_compile/01_typeFixed/011_fixed_precision_negativ.prl
MODULE(m);

PROBLEM;

DCL f FIXED(-1);

MODEND;

